feat: beta pathes updates

--- a/examples/bookshelf/package.json
+++ b/examples/bookshelf/package.json
@@ -33,10 +33,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-international-phone": "^4.2.6",
-    "react-shop": "1.0.0-beta.1",
-    "react-shop-auth": "1.0.0-beta.1",
-    "react-shop-mui": "1.0.0-beta.1",
-    "react-shop-stripe": "1.0.0-beta.1",
+    "react-shop": "^1.0.0-beta.2",
+    "react-shop-auth": "^1.0.0-beta.2",
+    "react-shop-mui": "^1.0.0-beta.3",
+    "react-shop-stripe": "^1.0.0-beta.2",
     "resend": "^3.5.0",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
