--- a/packages/react-shop-auth/package.json
+++ b/packages/react-shop-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-shop-auth",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "description": "Next-auth adapter for React Shop",
   "license": "MIT",
   "author": "Vasyl Pukii",
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "next-auth": "5.0.0-beta.25",
-    "react-shop": "1.0.0-beta.1"
+    "react-shop": "^1.0.0-beta.2"
   },
   "peerDependencies": {
     "next": "^14.1.1 || ^15.0.0",
