--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
-  - 'examples/**'
-  - 'packages/**'
-  - '!**/test/**'
+  - 'examples/*'
+  - 'packages/*'
+  - '!packages/react-shop-create/templates/*'
+  - '!**/test/*'
   - '!documentation'
